# Data-Architect-Challenge---UNAL

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  docs.md  init.sql  pyproject.toml
src/: __init__.py
src/ingestion/: loader.py
src/loading/: bronze_loader.py  database.py  gold_builder.py  models.py
src/orchestration/: flows.py
src/pipeline/: main.py
src/processing/: aggregation.py  cleaning.py  data_quality.py  docentes.py  estudiantes.py  sue_classifier.py
src/utils/: config.py
tests/: dry_run.py
